catnip/catnip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomscatnip-service
  namespace: tomscatnip
  labels: #Labels are how all the services and routes tie together
    app: tomscatnip
    app.kubernetes.io/component: tomscatnip
    app.kubernetes.io/instance: tomscatnip
spec:
  ports:
  - protocol:  TCP
    port: 8000 #Can be any port, its what URL port that maps to below port will be
    targetPort: 5000 #Port Pod Daemon listens on
  selector:
    app: tomscatnip
status:
  loadBalancer: {}
